Css clean up and correct play-icon opacity for stretch goals, when hovered.

--- a/src/components/Album/style.css
+++ b/src/components/Album/style.css
@@ -10,60 +10,17 @@
   width: calc(25% - 40px);
   height: 100%;
 }
+
+.album:hover {
+  background-color: #0000009a;
+}
+
 .album-info {
   flex: 1;
   text-align: center;
   padding: 10px;
   text-align: left;
   font-size: 16px;
-}
-.album:hover .icons-container {
-  opacity: 1; /* Set opacity to 1 when hovering over the album */
-}
-.cover-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-img button {
-  background: none; /* Set background to none */
-}
-button {
-  background: none; /* Set background to none */
-  border-style: none;
-}
-.icons-container img {
-  width: 40px;
-  height: 40px;
-  transition: transform 0.3s ease; /* Add a transition for smooth scaling */
-}
-
-.icons-container .play-icon:hover {
-  transform: scale(
-    1.2
-  ); /* Increase the size on hover */
-}
-
-.album:hover {
-  background-color: #0000009a;
-}
-
-.icons-container {
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
-  opacity: 0; /* Initially set opacity to 0 */
-  transition: opacity 0.3s ease;
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  justify-content: center;
 }
 
 .album-content {
@@ -72,4 +29,20 @@ button {
   height: 0;
   padding-bottom: 100%; /* 1:1 Aspect Ratio for a square shape */
   overflow: hidden;
+}
+
+.album:hover .icons-container {
+  opacity: 1; /* Set opacity to 1 when hovering over the album */
+}
+
+/* Decrease opacity for other icons when album is hovered */
+.album:hover .icons-container .heart-icon,
+.album:hover .icons-container .dots-icon {
+  opacity: 0.5;
+}
+
+/* Set full opacity for other icons when specifically hovered */
+.album:hover .icons-container .heart-icon:hover,
+.album:hover .icons-container .dots-icon:hover {
+  opacity: 1;
 }
