--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,18 +1,28 @@
-.arrow-icon {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 16px;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
+.sidebar {
+  width: 18%;
+  background-color: rgb(0, 0, 0);
+  border-right: 1px solid rgba(128, 128, 128, 0.458);
+  border-left: 1px solid rgba(128, 128, 128, 0.458);
+  height: 80vh; /* Set the height to 100% of the viewport height */
+  overflow-y: auto; /* Allow vertical scrolling if the content exceeds the height */
+  transition: transform 0.3s ease-out;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transform: translateX(100%);
+  z-index: 1;
 }
 
-.arrow-up {
-  border-bottom: 8px solid #000;
+.sidebar.open {
+  transform: translateX(0);
+  padding: 25px; 
 }
 
-.arrow-down {
-  border-top: 8px solid #000;
+.sidebar h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: white;
+  color: #1db954;
 }
 
 .border-line {
@@ -38,6 +48,11 @@
   padding-top: 14px;
 }
 
+.sidebar .image {
+  width: 100%;
+  margin-right: 18px;
+}
+
 .sidebar ul li a {
   text-decoration: none;
   color: white;
@@ -55,7 +70,3 @@
   color: white;
 }
 
-.sidebar .image {
-  width: 100%;
-  margin-right: 18px;
-}
