--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,37 +1,4 @@
-.header-title {
-  text-align: center;
-  color: white;
-  font-size: 28px;
-  font-weight: 400;
-}
 
-.header-sub {
-  text-align: center;
-  color: white;
-  font-size: 28px;
-  font-weight: 200;
-}
-
-/* Sidebar styles */
-.sidebar {
-  width: 18%;
-  background-color: rgb(0, 0, 0);
-  border-right: 1px solid rgba(128, 128, 128, 0.458);
-  border-left: 1px solid rgba(128, 128, 128, 0.458);
-  height: 100vh; /* Set the height to 100% of the viewport height */
-  overflow-y: auto; /* Allow vertical scrolling if the content exceeds the height */
-  transition: transform 0.3s ease-out;
-  position: fixed;
-  right: 0;
-  top: 0;
-  transform: translateX(100%);
-  z-index: 1;
-}
-
-.sidebar.open {
-  transform: translateX(0);
-  padding: 25px; /* Add padding to the open sidebar */
-}
 
 .toggle-button {
   display: flex;
@@ -47,22 +14,6 @@
   cursor: pointer;
   margin: 16px 8px;
   transition: background-color 0.3s ease;
-}
-
-.arrow-icon {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 16px;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-}
-
-.sidebar h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
-  color: white;
-  color: #1db954;
 }
 
 .sort-buttons {
